--- a/index.html
+++ b/index.html
@@ -67,10 +67,10 @@
                         <div class="content1">
                             <div class="content-text">
                                 <div class="text1">
-                                    <p id="text1">Buồn Ngủ Qúa</p>
+                                    <p id="text1">Gửi Bạn Many</p>
                                 </div>
                                 <div class="text2">
-                                    <h2 id="text2">chúc mí bạn giáng sinh dui dẻ nhoa nhoa 
+                                    <h2 id="text2">Chúc Kim Nhiều giáng sinh dui dẻ nhóa nhóa 
                                     </h2>
                                     <h2 id="text3">Mình thấy lạnh quá mình đi ngủ đây
                                     </h2>
